finalize move from donate to contrib